# load-tester-rs

./: Cargo.toml
load-tester/: Cargo.toml  README.md  ROADMAP.md
load-tester/src/: config.rs  http.rs  lib.rs  main.rs  metrics.rs  payload.rs  person.json  worker.rs
load-tester/src/cmd/: config.rs  execute.rs  http.rs  mod.rs
load-tester/tests/payloads/: test_person.txt
test-server/: Cargo.toml  README.md
test-server/src/: main.rs
