[package]
name = "load-tester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.0", features = ["derive"] }
clap_builder = "4.6.0"
http = "1.4.2"
reqwest = { version = "0.13.4", features = ["json"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
